--- a/SimpleTweetMap/Client/packages.config
+++ b/SimpleTweetMap/Client/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="jQuery" version="1.6.4" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="0.11.1-build00694" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.RuntimeTelemetry" version="0.11.1-build00694" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Web" version="0.11.1-build00694" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.1.2" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
