--- a/SimpleTweetMap/Client/packages.config
+++ b/SimpleTweetMap/Client/packages.config
@@ -4,9 +4,18 @@
   <package id="Microsoft.ApplicationInsights" version="0.11.1-build00694" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.RuntimeTelemetry" version="0.11.1-build00694" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Web" version="0.11.1-build00694" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.1.2" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.0.24" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
 </packages>
