--- a/SimpleTweetMap.Web/Web.config
+++ b/SimpleTweetMap.Web/Web.config
@@ -4,6 +4,12 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<appSettings>
+		<add key="accessToken" value=""/>
+		<add key="accessTokenSecret" value=""/>
+		<add key="consumerKey" value=""/>
+		<add key="consumerSecret" value=""/>
+	</appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -17,6 +23,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.0.0" newVersion="3.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
