--- a/SimpleTweetMap.Web/packages.config
+++ b/SimpleTweetMap.Web/packages.config
@@ -1,14 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.3.1" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR" version="2.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.7" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.165" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="PCLWebUtility" version="1.0.2" targetFramework="net45" />
+  <package id="TweetinviAPI" version="0.9.3.4" targetFramework="net45" />
 </packages>
