--- a/SimpleTweetMap.Web/Web.config
+++ b/SimpleTweetMap.Web/Web.config
@@ -4,16 +4,13 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<appSettings>
-		<add key="accessToken" value=""/>
-		<add key="accessTokenSecret" value=""/>
-		<add key="consumerKey" value=""/>
-		<add key="consumerSecret" value=""/>
-	</appSettings>
+	<appSettings file="appSettings.config"/>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-  </system.web>
+  <httpHandlers>
+      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+    </httpHandlers></system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -30,4 +27,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
+    <httpErrors existingResponse="PassThrough" />
+    <handlers>
+      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+    </handlers>
+  </system.webServer></configuration>
