--- a/SimpleTweetMap.Web/Web.config
+++ b/SimpleTweetMap.Web/Web.config
@@ -4,13 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<appSettings file="appSettings.config"/>
+	<appSettings file="appSettings.config" />
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-  <httpHandlers>
-      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </httpHandlers></system.web>
+  </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -27,10 +25,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
-    <httpErrors existingResponse="PassThrough" />
-    <handlers>
-      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </handlers>
-  </system.webServer></configuration>
+</configuration>
