--- a/SimpleTweetMap.Web/Web.config
+++ b/SimpleTweetMap.Web/Web.config
@@ -4,7 +4,12 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<appSettings file="appSettings.config" />
+	<appSettings>
+		<add key="accessToken" value="" />
+		<add key="accessTokenSecret" value="" />
+		<add key="consumerKey" value="" />
+		<add key="consumerSecret" value="" />
+	</appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
