--- a/SimpleTweetMap.Web/SimpleTweetMap.Web.csproj
+++ b/SimpleTweetMap.Web/SimpleTweetMap.Web.csproj
@@ -135,6 +135,9 @@
   <ItemGroup>
     <Content Include="AppSettings.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="aptitud.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="index.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
