--- a/SimpleTweetMap.Web/SimpleTweetMap.Web.csproj
+++ b/SimpleTweetMap.Web/SimpleTweetMap.Web.csproj
@@ -138,6 +138,9 @@
     <Content Include="aptitud.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="images\aptitud.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="index.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
